fix overflowing in x axis for mobile

--- a/apps/vegsochk_web/assets/css/app.scss
+++ b/apps/vegsochk_web/assets/css/app.scss
@@ -68,3 +68,7 @@ body {
     }
   }
 }
+html, body {
+  position:relative;
+  overflow-x:hidden;
+}
